--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>МИДИС</title>
 </head>
 
-<body background="img/bg.svg">
+<body>
     <header class="header">
         <img class="M" src="img/burger-M.png" alt="M">
         <img height="80px" src="img/midis.png" alt="МИДиС">
@@ -27,7 +27,7 @@
                 <input type="text" name="login" placeholder="Логин" required>
                 <input type="password" name="pass" placeholder="Пароль" required><br>
                 <label><input type="checkbox">Запомните меня</label>
-                <a href="#"> Я забыл пароль</a>
+                <a class="forget-pass" href="#"> Я забыл пароль</a>
                 <input type="submit" value="войти">
             </form>
         </div>
