--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <h1>Вход в личный кабинет</h1>
                 <input type="text" name="login" placeholder="Логин" required>
                 <input type="password" name="pass" placeholder="Пароль" required><br>
-                <label><input type="checkbox">Запомните меня</label>
-                <a class="forget-pass" href="#"> Я забыл пароль</a>
-                <input type="submit" value="войти">
+                <div class="forget-remember">
+                    <input class="join" type="submit" value="Войти">
+                    <a class="forget-pass" href="#"> Забыли пароль?</a>
+                </div>
+                
             </form>
         </div>
         <div class="project">
