--- a/index.html
+++ b/index.html
@@ -53,14 +53,20 @@
         </div>
     </div>
     <footer class="footer">
-        <hr>
+        
         <div class="footer_block">
             <a href="http://midis.ru">
                 <p>Международный Институт Дизайна и Сервиса. Копирование информации с сайта разрешено только с
                     письменного согласия администрации сайта.</p>
             </a>
         </div>
-
+        <div class="ft_call">
+            <b>Связь с нами:</b><br>
+            <b class="gmail">onetaphack@gmail.com</b><br>
+            <a href="mailto:onetaphack@gmail.com?subject=Мне нужна помощь" target="_blank"><img src="img/gmail.svg" alt="gmail" width="50px" height="20px"></a>
+            <a href="https://vk.com/id62107393" target="_blank"><img src="img/vk.svg" alt="vk" width="50px" height="23px"></a>
+            <a href="https://t.me/Rab1Dok" target="_blank"><img src="img/teleg.svg" alt="telegramm" width="50px" height="20px"></a>
+        </div>
     </footer>
 </body>
 
