--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <header class="header">
 
         <div>
-            <img class="M" src="img/burger-M.png" alt="M">
-        <img height="80px" src="img/midis.png" alt="МИДиС">
+            
+            <a href="index.html"><img class="M" src="img/burger-M.png" alt="M"></a>
+            <a href="index.html"><img height="80px" src="img/midis.png" alt="МИДиС"></a>
+        
         </div>
         <h4>Международный Институт Дизайна и Сервиса</h4>
     </header>
@@ -37,7 +39,7 @@
             </form>
         </div>
         <div class="project">
-            <h1>О проекте</h1>
+            <h1>Как выбрать профессию?</h1>
             <p><b>Выбор профессии</b> – это одно из самых важных решений, который зачастую определяет
                 всю
                 дальнейшую
