--- a/article1.html
+++ b/article1.html
@@ -17,8 +17,8 @@
     <div id="wrapper">
         <header class="header">
             <div>
-                <img class="M" src="../img/burger-M.png" alt="M">
-                <img height="80px" src="../img/midis.png" alt="МИДиС">
+                <a href="../index.html"><img class="M" src="../img/burger-M.png" alt="M"></a>
+                <a href="../index.html"><img height="80px" src="../img/midis.png" alt="МИДиС"></a>
             </div>
         </header>
         <div class="container">
@@ -38,7 +38,7 @@
                     <p class="no btn-none"> вы не прошли полностью Тест</p>
                 </div>
                 <div class="btns">
-                    <div class="block2 border"><a href="../index.html"><img src="../img/home-solid.svg" width="55px"
+                    <div class="block2 border"><a class="midis_a" href="../index.html"><img src="../img/home-solid.svg" width="55px"
                                 alt="На главную" style="float:left"><b>На главную</b></a>
                     </div>
                     <div class="btns-rigth">
@@ -63,7 +63,7 @@
     <footer class="footer">
         
         <div class="footer_block">
-            <a href="http://midis.ru">
+            <a class="midis_a" href="http://midis.ru"  style="margin-bottom: 10px;">
                 <p>Международный Институт Дизайна и Сервиса. Копирование информации с сайта разрешено только с
                     письменного согласия администрации сайта.</p>
             </a>
