--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </form>
         </div>
         <div class="project">
-            <h1>Как выбрать профессию?</h1>
+            <h1 class="ogo2">Как выбрать профессию?</h1>
             <p><b>Выбор профессии</b> – это одно из самых важных решений, который зачастую определяет
                 всю
                 дальнейшую
@@ -51,7 +51,10 @@
                 критерии будущей профессии. На нашем сайте вы сможете подобрать профессию по вашим
                 критериям
                 и
-                вкусам.</p>
+                вкусам.</p><br>
+                <h3 class="ogo2">Пройди профориентационный тест</h3>
+                <p>Полезную помощь в выборе профессии могут оказать тесты на профориентацию. Что это?  Это разнообразные утверждения, с которыми ты можешь согласиться или не согласиться. По результатам теста ты поймешь, какая область профессиональной деятельности тебе подходит.  
+                    </p>
         </div>
     </div>
     <footer class="footer">
