--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div>
             
-            <a href="index.html"><img class="M" src="img/burger-M.png" alt="M"></a>
-            <a href="index.html"><img height="80px" src="img/midis.png" alt="МИДиС"></a>
+            <a class="midis_a" href="index.html"><img class="M" src="img/burger-M.png" alt="M"></a>
+            <a class="midis_a" href="index.html"><img height="80px" src="img/midis.png" alt="МИДиС"></a>
         
         </div>
         <h4>Международный Институт Дизайна и Сервиса</h4>
@@ -67,7 +67,7 @@
         </div>
         <div class="ft_call">
             <b>Связь с нами:</b><br>
-            <b class="gmail">onetaphack@gmail.com</b><br>
+            <b class="gmail midis_a">onetaphack@gmail.com</b><br>
             <a class="midis_a" href="mailto:onetaphack@gmail.com?subject=Мне нужна помощь" target="_blank"><img src="img/gmail.svg" alt="gmail" width="50px" height="20px"></a>
             <a class="midis_a" href="https://vk.com/id62107393" target="_blank"><img src="img/vk.svg" alt="vk" width="50px" height="23px"></a>
             <a class="midis_a" href="https://t.me/Rab1Dok" target="_blank"><img src="img/teleg.svg" alt="telegramm" width="50px" height="20px"></a>
