--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <div class="container">
         <div>
             <form action="articles/article1.html" class="login-form">
-                <h1>Вход в личный кабинет</h1>
-                <input type="text" name="login" placeholder="Логин" required>
-                <input type="password" name="pass" placeholder="Пароль" required><br>
+                <h1>Регистрация</h1>
+                <input type="text" name="login" placeholder="Имя" id="includedContent Name_nick"  required>
+                <input type="text" name="pass" placeholder="Фамилия" ><br>
+                <input type="email" name="login" placeholder="Электронная почта" >
+                <input type="text" name="pass" placeholder="Телефон" id="nomer" maxlength="12" ><br>
                 <div class="forget-remember">
                     <input class="join" type="submit" value="Войти">
                     <a class="forget-pass midis_a" href="#"> Забыли пароль?</a>
