--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <form action="articles/article1.html" class="login-form">
                 <h1>Регистрация</h1>
                 <input type="text" name="login" placeholder="Имя" id="includedContent Name_nick"  required>
-                <input type="text" name="pass" placeholder="Фамилия" ><br>
-                <input type="email" name="login" placeholder="Электронная почта" >
-                <input type="text" name="pass" placeholder="Телефон" id="nomer" maxlength="12" ><br>
+                <input type="text" name="pass" placeholder="Фамилия" required><br>
+                <input type="email" name="login" placeholder="Электронная почта"required >
+                <input type="text" name="pass" placeholder="Телефон" id="nomer" maxlength="12" required><br>
                 <div class="forget-remember">
                     <input class="join" type="submit" value="Войти">
                     <a class="forget-pass midis_a" href="#"> Забыли пароль?</a>
